name:                sudoku-generator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Average-user/sudoku-generator#readme
license:             MIT
license-file:        LICENSE
author:              Lucas Polymeris
maintainer:          lucaspolymeris@gmail.com
copyright:           2017 Lucas Polymeris
category:            _
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Shuffle
                     , GeneratorFunctions
  build-depends:       base >= 4.7 && < 5
                     , array
                     , random
  default-language:    Haskell2010

executable sudoku-generator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sudoku-generator
  default-language:    Haskell2010

test-suite sudoku-generator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sudoku-generator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Average-user/sudoku-generator
